2015-05-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure.ac, configure:
    Update the DEFAULT_MPLABX_PATH.

2015-05-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, header/*, libgputils/gpcfg-table.c,
    libgputils/gpprocessor.c, libgputils/gpreg-table.c, lkr/*:
    Updated based on the mplabx-3.00.

2015-03-07  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/Makefile.in, doc/html-help/Makefile.in, gpasm/Makefile.in,
    gplink/Makefile.in, gputils/Makefile.in, header/Makefile.in,
    libgputils/Makefile.in, libiberty/Makefile.in, lkr/Makefile.in,
    man/Makefile.in, man/fr/Makefile.in, Makefile.in, aclocal.m4,
    compile, config.h.in, configure:
    regenerated

2015-03-05  Mats Erik Andersson <meand@users.sourceforge.net>
  * configure.ac:
    Improve the check that Flex is more recent than version 2.5.4.

  * gpasm/Makefile.am, gplink/Makefile.am, gputils/Makefile.am:
    Modify these templates to be portable for use with BSD Make.

2015-03-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p16f753.inc, header/p16hv753.inc, header/p16lf1619.inc:
    Updated based on the mplabx-2.35.

2015-03-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, header/*.inc, libgputils/gpcfg-table.c,
    libgputils/gpreg-table.c, lkr/*.lkr:
    Updated based on the mplabx-2.35.

2015-02-09  Mats Erik Andersson <meand@users.sourceforge.net>
  * configure.ac:
    Check for headers <sys/ioctl.h> and <termios.h>.

  * libgputils/gpprocessor.c:
    Let --list-chips adapt to available screen width. Calculate
    the maximal column_width from the desired chip selection, not
    from all available chips. Fix a corner case for the last newline.

2015-02-04  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx:
    Fixed the bug: "#280 Doc pages cut off on right side"
    Thanks to Joseph Watson.

  * doc/gputils.lyx, header/Makefile.am, header/Makefile.in,